# dotfiles

./: .gitignore  .gitmodules  .stow-local-ignore  LICENSE  README.md  dot-bashrc  flake.nix  link.sh  stow_setup.sh
akari-connect/: Cargo.toml  flake.nix
akari-connect/src/: config.rs  main.rs
btop/: btop.conf
cava/: config  reload-theme.sh
config/discord/: reload-theme.sh
config/kitty/: kitty.conf
config/scripts/: loopback.sh
config/spicetify/: config-xpui.ini
dot-config/: libinput-gestures.conf
dot-config/akari-connect/: Cargo.toml
dot-config/akari-connect/src/: config.rs  dbus.rs  log.rs  main.rs  mpris.rs  networkmanager.rs
dot-config/akari-connect/src/dbus/: definition.rs
dot-config/akari-settings/: generate.lua  user.lua
dot-config/alacritty/: alacritty.toml  color.toml
firefox/: manifest.json  pywal.xpi  reload-theme.sh
helix/: config.nix  default.nix  language.nix  languages.nix  theme.nix
hypr/: disable-gpu.sh  hyprland.conf  hyprlock.conf  ozone.sh  reload-themes.sh  screenshot.sh
kitty/: kitty-template.conf  kitty.conf  reload-theme
mako/: config  config-template  reload-theme  reload-theme.sh
neofetch/: config.conf  pfp.py  reload-theme.sh  shell.nix
obsidian/: manifest.json  reload-theme  reload-theme.sh  theme-template.css
scripts/: disable-gpu.sh  polkit-authentication-agent.sh  reload-themes.sh  unicode.sh  wallpaper.sh
spicetify/: color-template.ini  config-xpui.ini  reload-theme
waybar/: config.jsonc  reload-theme.sh  style.css  system-actions.sh
wlogout/: style.css
wofi/: config  style.css
(+251 files in other folders)
